k8s/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbiot-detector
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: nbiot-detector
        image: minhtuan172/nbiot-detector-app:main-6-9a0d4ca
        resources:
          requests:
            cpu: "100m"
