k8s/overlays/prod/patch-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nbiot-detector-route
spec:
  parentRefs:
  - name: internal-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - "app.tuan-lnm.org"
  rules:
  - backendRefs:
    - name: nbiot-detector
      port: 8000
